--- a/public/assets/css/home/index.css
+++ b/public/assets/css/home/index.css
@@ -29,7 +29,7 @@
     line-height: 1.5em;
     text-align: center;
   margin-bottom: 15px;
-    text-transform: uppercase;
+/*     text-transform: uppercase; */
     letter-spacing: 1px;
     background: rgba(0, 0, 0, 0);
     border-radius: 0px 0px 5px 5px;
